Fix IE11 overflow issues
for some reason IE needs overflow hidden
to prevent a horizontal scroll bar

--- a/src/components/ImageToggle/ImageToggle.module.sass
+++ b/src/components/ImageToggle/ImageToggle.module.sass
@@ -5,6 +5,7 @@
   position: relative
   box-sizing: content-box
   padding: 24px 24px 36px
+  overflow: hidden
 
   text-align: center
 
